<resources>
    <string name="app_name">FoodDelivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_restaurant_details">Restaurant Details</string>
    <string name="add_menu_to_order">Add Menu</string>
    <string name="remove_from_order">Add Menu</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="finish_order">Finish Order</string>
    <string name="deliveries_status">Deliveries Status</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_activityyyyy">LoginActivityyyyy</string>
    <string name="title_activity_rider">RiderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="client">Client</string>
    <string name="rider">Rider</string>
</resources>