<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pt.ua.cm.fooddelivery.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_restaurantFragment"
            app:destination="@id/restaurant_fragment" />
    </fragment>

    <fragment
        android:id="@+id/restaurant_fragment"
        android:name="pt.ua.cm.fooddelivery.ui.RestaurantFragment"
        android:label="@string/title_restaurant_details"
        tools:layout="@layout/fragment_restaurant" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_restaurant_fragment_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="pt.ua.cm.fooddelivery.ui.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="pt.ua.cm.fooddelivery.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="pt.ua.cm.fooddelivery.ui.Login"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>
<!--
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="pt.ua.cm.fooddelivery.ui.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_restaurantFragment"
            app:destination="@id/restaurantFragment" />
    </fragment>
    <fragment
        android:id="@+id/restaurantFragment"
        android:name="pt.ua.cm.fooddelivery.ui.RestaurantFragment"
        android:label="fragment_restaurant"
        tools:layout="@layout/fragment_restaurant" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="pt.ua.cm.fooddelivery.ui.CartFragment"
        android:label="CartFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="pt.ua.cm.fooddelivery.ui.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
-->