<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pt.ua.cm.fooddelivery.client.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_restaurantFragment"
            app:destination="@id/restaurant_fragment" />
    </fragment>

    <fragment
        android:id="@+id/restaurant_fragment"
        android:name="pt.ua.cm.fooddelivery.client.ui.RestaurantFragment"
        android:label="@string/title_restaurant_details"
        tools:layout="@layout/fragment_restaurant" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="pt.ua.cm.fooddelivery.client.ui.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_deliveries_fragment"
            app:destination="@id/deliveries_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="pt.ua.cm.fooddelivery.client.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>
    <fragment
        android:id="@+id/deliveries_fragment"
        android:name="pt.ua.cm.fooddelivery.client.ui.DeliveriesFragment"
        android:label="Deliveries List"
        tools:layout="@layout/fragment_deliveries">
        <action
            android:id="@+id/action_deliveries_fragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="pt.ua.cm.fooddelivery.client.ui.MapFragment"
        android:label="MapsFragment" >
        <argument
            android:name="riderLocation"
            app:argType="com.google.android.gms.maps.model.LatLng"
            app:nullable="true" />
    </fragment>
</navigation>
<!--
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="pt.ua.cm.fooddelivery.ui.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_restaurantFragment"
            app:destination="@id/restaurantFragment" />
    </fragment>
    <fragment
        android:id="@+id/restaurantFragment"
        android:name="pt.ua.cm.fooddelivery.ui.RestaurantFragment"
        android:label="fragment_restaurant"
        tools:layout="@layout/fragment_restaurant" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="pt.ua.cm.fooddelivery.ui.CartFragment"
        android:label="CartFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="pt.ua.cm.fooddelivery.ui.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
-->